--- a/app/globals.css
+++ b/app/globals.css
@@ -68,24 +68,28 @@
   &::after {
     content: "";
     display: block;
-    width: 0;
-    height: 2px;
+    width: 2px;
+    height: 0;
     background-color: #326EFB;
     position: absolute;
-    left: auto;
+    top: auto;
     right: 0;
     bottom: 0;
     z-index: 100;
     transition: all 0.3s ease-in-out;
-
-    
   }
 
   &:hover{
     &::after {
-      width: 100%;
-      right: auto;
-      left: 0;
+      height: 100%;
+      bottom: auto;
+      top: 0;
     }
+  }
+}
+
+.nav-item.active{
+  &::after{
+    height: 100% !important;
   }
 }
